--- a/src/app/GrupoPanelUsuario/Info/user-selected/user-selected.component.html
+++ b/src/app/GrupoPanelUsuario/Info/user-selected/user-selected.component.html
@@ -1,7 +1,7 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
+<div class="container-fluid p-0">
   <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
 
@@ -64,7 +64,7 @@
 <!-- Modal -->
 <div class="modal fade" id="modalBorrar{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="ModalLabel"
   aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
