--- a/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
+++ b/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
@@ -1,90 +1,87 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
-  <app-info-bar-user class="col"></app-info-bar-user>
+<div class="container-fluid p-0">
+  <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
 
-<div class="row d-flex justify-content-center">
-  <div style="min-width: 85%; max-width: 90%;">
-    <div class="container-fluid mt-3">
+<div class="container-fluid">
+  <div class="container-fluid mt-3 d-flex flex-column justify-content-center">
+    <h3 class="col text-center">Canarios de <b>{{ this.user.name }}</b></h3>
+    <!--TABLA-->
+    <div class="conatiner-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
+      <table class="col" id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Nº Anilla</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Fª de Nacimiento</th>
+            <th scope="col">Nº Anilla Padre</th>
+            <th scope="col">Nº Anilla Madre</th>
+            <th scope="col">Intercambiar</th>
+          </tr>
+        </thead>
+        <tbody *ngIf="canarios">
+          <tr *ngFor="let canario of canarios">
+            <th style="font-family: monospace;" scope="row"><a routerLink="/canarios/{{ canario.id }}">{{
+                canario.anilla }}</a>
+            </th>
+            <th style="font-family: monospace; text-align: center;" scope="row">{{ canario.sexo }}</th>
+            <td style="font-family: monospace;" scope="row">{{ canario.nacimiento }}</td>
+            <td style="font-family: monospace;" scope="row">{{ canario.anillaPadre }}</td>
+            <td style="font-family: monospace;" scope="row">{{ canario.anillaMadre }}</td>
+            <td>
+              <span class="d-flex justify-content-center">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn" data-toggle="modal"
+                  [attr.data-target]="'#modalIntercambio'+canario.id">
+                  <i class="fas fa-exchange-alt"></i>
+                </button>
+              </span>
 
-      <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
-        <h3>Canarios de <b>{{ this.user.name }}</b></h3>
-        <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
-          <thead class="table-dark">
-            <tr>
-              <th scope="col">Nº Anilla</th>
-              <th scope="col">Sexo</th>
-              <th scope="col">Fª de Nacimiento</th>
-              <th scope="col">Nº Anilla Padre</th>
-              <th scope="col">Nº Anilla Madre</th>
-              <th scope="col">Intercambiar</th>
-            </tr>
-          </thead>
-          <tbody *ngIf="canarios">
-            <tr *ngFor="let canario of canarios">
-              <th style="font-family: monospace;" scope="row"><a routerLink="/canarios/{{ canario.id }}">{{
-                  canario.anilla }}</a>
-              </th>
-              <th style="font-family: monospace; text-align: center;" scope="row">{{ canario.sexo }}</th>
-              <td style="font-family: monospace;" scope="row">{{ canario.nacimiento }}</td>
-              <td style="font-family: monospace;" scope="row">{{ canario.anillaPadre }}</td>
-              <td style="font-family: monospace;" scope="row">{{ canario.anillaMadre }}</td>
-              <td>
-                <span class="d-flex justify-content-center">
-                  <!-- Button trigger modal -->
-                  <button type="button" class="btn" data-toggle="modal"
-                    [attr.data-target]="'#modalIntercambio'+canario.id">
-                    <i class="fas fa-exchange-alt"></i>
-                  </button>
-                </span>
-
-                <!-- Modal -->
-                <div class="modal fade" id="modalIntercambio{{ canario.id }}" tabindex="-1" role="dialog"
-                  aria-labelledby="ModalLabel" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="ModalLabel">Intercambio</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        ¿Está seguro de solicitar el intercambio de <b>{{ canario.anilla }}?</b>
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn blue-bg-snowmasher text-white"
-                          (click)="intercambiar(canario.id, canario.id_usuario)">Solicitar</button>
-                      </div>
+              <!-- Modal -->
+              <div class="modal fade" id="modalIntercambio{{ canario.id }}" tabindex="-1" role="dialog"
+                aria-labelledby="ModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="ModalLabel">Intercambio</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      ¿Está seguro de solicitar el intercambio de <b>{{ canario.anilla }}?</b>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                      <button type="button" class="btn blue-bg-snowmasher text-white"
+                        (click)="intercambiar(canario.id, canario.id_usuario)">Solicitar</button>
                     </div>
                   </div>
                 </div>
-              </td>
-            </tr>
-          </tbody>
-          <tbody *ngIf="!canarios">
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-            <th scope="col">Sin datos</th>
-          </tbody>
-        </table>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+        <tbody *ngIf="!canarios">
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+          <th scope="col">Sin datos</th>
+        </tbody>
+      </table>
 
-        <app-loader id="loader"></app-loader>
+      <app-loader id="loader"></app-loader>
 
-      </div>
     </div>
   </div>
 </div>
 
-<div class="row" style="position: relative; bottom: 0px;">
-  <app-footer class="min-vw-100 d-flex justify-content-center"></app-footer>
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
