--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-moderador/formulario-nuevo-moderador.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-moderador/formulario-nuevo-moderador.component.html
@@ -1,12 +1,12 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="min-vw-100" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
-  <app-info-bar class="col"></app-info-bar>
+<div class="container-fluid p-0">
+  <app-info-bar class="col p-0"></app-info-bar>
 </div>
 
 <!--Formulario-->
-<div class="row mh-50 h-50 d-flex justify-content-center align-center">
+<div class="container-fluid mh-50 h-50 d-flex justify-content-center align-center">
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
@@ -47,6 +47,6 @@
   <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
