--- a/src/app/GrupoFormularios/Updates/update-asociacion/update-asociacion.component.html
+++ b/src/app/GrupoFormularios/Updates/update-asociacion/update-asociacion.component.html
@@ -1,11 +1,11 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
+<div class="container-fluid p-0">
   <app-info-bar class="col p-0"></app-info-bar>
 </div>
 <!--Formulario-->
-<div class="row mh-50 h-50 d-flex justify-content-center align-center">
+<div class="container-fluid mh-50 h-50 d-flex justify-content-center align-center">
   <div class="col-10 d-flex flex-column justify-content-center">
 
     <div class="alert alert-success" style="display: none;" role="alert">
@@ -22,11 +22,13 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
         <label for="nombre">Nombre:</label>
-        <input class="form-control" id="nombre" formControlName="nombre" [(ngModel)]="asociacion.nombre" type="text" placeholder="Nombre" value="{{ asociacion.nombre }}">
+        <input class="form-control" id="nombre" formControlName="nombre" [(ngModel)]="asociacion.nombre" type="text"
+          placeholder="Nombre" value="{{ asociacion.nombre }}">
       </div>
       <div class="mb-3">
         <label for="nombre">URL de Imagen:</label>
-        <input class="form-control" id="nombre" formControlName="url_img" [(ngModel)]="asociacion.url_img" type="text" placeholder="URL de Imagen" value="{{ asociacion.url_img }}">
+        <input class="form-control" id="nombre" formControlName="url_img" [(ngModel)]="asociacion.url_img" type="text"
+          placeholder="URL de Imagen" value="{{ asociacion.url_img }}">
       </div>
       <div class="mb-3">
         <label for="id_mod">ID Moderador:</label>
@@ -45,6 +47,7 @@
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
   <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
