--- a/src/app/GrupoGeneral/info-bar/info-bar.component.html
+++ b/src/app/GrupoGeneral/info-bar/info-bar.component.html
@@ -1,18 +1,18 @@
-<div class="container-fluid pt-1 pb-1 blue-bg-snowmasher d-flex flex-row">
+<div class="container-fluid pt-1 pb-1 mb-3 blue-bg-snowmasher d-flex flex-row">
 
   <!-- Imagen -->
-  <div class="col col-sm-2 d-none d-sm-block">
-    <img *ngIf="asociacion.url_img" class="img img-responsive img-thumbnail"
-      style="max-height: 10rem; min-height: 8rem; margin: 1rem; margin-left: 3rem;" src="{{ asociacion.url_img }}">
+  <div class="col col-md-3 col-lg-2 d-none d-md-flex justify-content-center">
+    <img *ngIf="asociacion.url_img" class="img img-responsive img-thumbnail" style="margin: 1rem; margin-left: 3rem;"
+      src="{{ asociacion.url_img }}">
   </div>
 
   <!-- Cuerpo principal -->
-  <div class="col col-sm-10 pt-2 pb-2 d-flex flex-column justify-content-between">
+  <div class="col col-md-9 col-lg-10 pt-2 pb-2 d-flex flex-column">
     <div class="container-fluid">
-      <h4 class="text-white ml-sm-1">{{ asociacion.nombre }}</h4>
+      <h4 class="text-white ml-md-1">{{ asociacion.nombre }}</h4>
     </div>
 
-    <div class="container.fluid d-flex justify-content-end">
+    <div class="container-fluid d-flex justify-content-end">
       <a class="btn info-btn-usr asoc-btn" routerLink="/principal">Publicaciones</a>
       <a class="btn info-btn-usr asoc-btn" routerLink="/principal/miembros">Miembros</a>
     </div>
