--- a/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
+++ b/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
@@ -1,16 +1,14 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
+<div class="container-fluid p-0">
   <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
-<div class="row d-flex justify-content-center">
-  <div style="min-width: 85%; max-width: 90%;">
-    <div class="container-fluid mt-3">
-
+<div class="container-fluid p-0">
+  <div class="container-fluid mt-3">
+    <h4 class="text-center">Notificaciones</h4>
       <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
-        <h4>Notificaciones</h4>
+      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
         <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
             <tr>
@@ -40,7 +38,7 @@
                 <!-- Modal -->
                 <div class="modal fade" id="modalBorrar{{ not.id }}" tabindex="-1" role="dialog"
                   aria-labelledby="ModalLabel" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
                         <h5 class="modal-title" id="ModalLabel">Borrar</h5>
@@ -68,13 +66,12 @@
       </div>
 
       <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
-        <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
+        <a routerLink="/panel" class="btn info-btn-usr" type="button">Atrás</a>
       </div>
     </div>
-  </div>
 </div>
 
 <!-- Footer -->
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
