--- a/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarAsociaciones/tabla-asociaciones/tabla-asociaciones.component.html
@@ -1,89 +1,93 @@
-<div class="row min-vw-100 d-flex justify-content-center">
-  <app-navbar class="col p-0" style="max-height: 4em; margin-bottom: 1em;"></app-navbar>
+<div class="container-fluid mb-3 p-0">
+  <app-navbar class="col p-0" style="max-height: 4em;"></app-navbar>
 </div>
-<div class="row">
+<div class="container-fluid p-0">
   <app-info-bar-user class="col p-0"></app-info-bar-user>
 </div>
-<div class="row d-flex justify-content-center">
-  <div style="min-width: 85%; max-width: 90%;">
-    <div class="container-fluid mt-3">
-      <div class="row mr-3 d-flex justify-content-end">
-        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button routerLink="./registerAsoc" type="button" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
-        </div>
+<div class="container-fluid p-0">
+  <div class="container-fluid mt-3">
+
+    <!-- Boton de alta -->
+    <div class="container-fluid mb-3 mb-lg-0 d-lg-flex justify-content-end">
+      <div class="col col-lg-2 btn-group" role="group" aria-label="Basic mixed styles example">
+        <button type="button" routerLink="./registerAsoc" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
       </div>
+    </div>
 
-      <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
+    <!--TABLA-->
+    <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
 
-        <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
-          <thead class="table-dark">
-            <tr>
-              <th scope="col">#ID</th>
-              <th scope="col">Nombre</th>
-              <th scope="col">ID Moderador</th>
-              <th scope="col">Fª Creación</th>
-              <th scope="col">Editar</th>
-              <th scope="col">Borrar</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let asoc of asociaciones">
-              <th style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.id }}</a></th>
-              <td style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{ asoc.nombre }}</a></td>
-              <td>{{ asoc.id_mod}}</td>
-              <td>{{ asoc.created_at | date: 'yyyy-MM-dd | HH:mm' }}</td>
-              <td>
-                <span class="d-flex justify-content-center">
-                  <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
-                    <i class="fas fa-edit"></i>
-                  </a>
-                </span>
-              </td>
-              <td>
-                <span class="d-flex justify-content-center">
-                  <!-- Button trigger modal -->
-                  <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalBorrar'+asoc.id">
-                    <i class="fas fa-trash"></i>
-                  </button>
-                </span>
+      <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">#ID</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">ID Moderador</th>
+            <th scope="col">Fª Creación</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Borrar</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let asoc of asociaciones">
+            <th style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{
+                asoc.id }}</a></th>
+            <td style="font-family: monospace;" scope="row"><a routerLink="/principal/asociacion/{{ asoc.id }}">{{
+                asoc.nombre }}</a></td>
+            <td>{{ asoc.id_mod}}</td>
+            <td>{{ asoc.created_at | date: 'yyyy-MM-dd | HH:mm' }}</td>
+            <td>
+              <span class="d-flex justify-content-center">
+                <a title="Editar" routerLink="./updateAsoc/{{ asoc.id }}">
+                  <i class="fas fa-edit"></i>
+                </a>
+              </span>
+            </td>
+            <td>
+              <span class="d-flex justify-content-center">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn" data-toggle="modal" [attr.data-target]="'#modalBorrar'+asoc.id">
+                  <i class="fas fa-trash"></i>
+                </button>
+              </span>
 
-                <!-- Modal -->
-                <div class="modal fade" id="modalBorrar{{ asoc.id }}" tabindex="-1" role="dialog"
-                  aria-labelledby="ModalLabel" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        ¿Está seguro de dar de baja a {{ asoc.nombre }}?
-                      </div>
-                      <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-danger" (click)="borrar(asoc.id)">Borrar</button>
-                      </div>
+              <!-- Modal -->
+              <div class="modal fade" id="modalBorrar{{ asoc.id }}" tabindex="-1" role="dialog"
+                aria-labelledby="ModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      ¿Está seguro de dar de baja a {{ asoc.nombre }}?
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                      <button type="button" class="btn btn-danger" (click)="borrar(asoc.id)">Borrar</button>
                     </div>
                   </div>
                 </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
 
-        <app-loader id="loader"></app-loader>
+      <app-loader id="loader"></app-loader>
 
-      </div>
+    </div>
 
-      <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
-        <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
-      </div>
+    <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
+      <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
     </div>
   </div>
+
 </div>
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
