--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -4,18 +4,18 @@
 <div class="row">
   <app-info-bar-user class="col"></app-info-bar-user>
 </div>
-<div class="row d-flex justify-content-center">
-  <div style="min-width: 85%; max-width: 90%;">
-    <div class="container-fluid mt-3">
-      <div class="row mr-3 d-flex justify-content-end">
-        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-          <button routerLink="./registerMod" type="button" class="btn btn-success"
-            style="padding: 0.2em 4em;">Alta</button>
-        </div>
+<div class="container-fluid p-0">
+  <div class="container-fluid mt-3">
+
+    <!-- Boton de alta -->
+    <div class="container-fluid mb-3 mb-lg-0 d-lg-flex justify-content-end">
+      <div class="col col-lg-2 btn-group" role="group" aria-label="Basic mixed styles example">
+        <button type="button" routerLink="./registerMod" class="btn btn-success" style="padding: 0.2em 4em;">Alta</button>
       </div>
+    </div>
 
       <!--TABLA-->
-      <div class="row mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive-sm">
+      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
 
         <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
@@ -54,7 +54,7 @@
                 <!-- Modal -->
                 <div class="modal fade" id="modalBorrar{{ miembro.id }}" tabindex="-1" role="dialog"
                   aria-labelledby="ModalLabel" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
+                  <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
                         <h5 class="modal-title" id="ModalLabel">Dar de baja</h5>
@@ -85,9 +85,9 @@
         <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
       </div>
 
-    </div>
   </div>
 </div>
-<div class="row">
-  <app-footer class="min-vw-100"></app-footer>
+
+<div class="container-fluid p-0">
+  <app-footer class="col p-0"></app-footer>
 </div>
