--- a/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
+++ b/src/app/GrupoCanario/tabla-canario-user/tabla-canario-user.component.html
@@ -9,7 +9,7 @@
   <div class="container-fluid mt-3 d-flex flex-column justify-content-center">
     <h3 class="col text-center">Canarios de <b>{{ this.user.name }}</b></h3>
     <!--TABLA-->
-    <div class="conatiner-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
+    <div class="conatiner-fluid mt-2 mb-2 min-vw-90 d-flex flex-column justify-content-center table-responsive">
       <table class="col" id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
         <thead class="table-dark">
           <tr>
