--- a/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
+++ b/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
@@ -8,7 +8,7 @@
   <div class="container-fluid mt-3">
     <h4 class="text-center">Notificaciones</h4>
       <!--TABLA-->
-      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
+      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex flex-column justify-content-center table-responsive">
         <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
             <tr>
