--- a/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
+++ b/src/app/GrupoPanelUsuario/administrarPublicaciones/tabla-publicaciones/tabla-publicaciones.component.html
@@ -15,7 +15,7 @@
     </div>
 
       <!--TABLA-->
-      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
+      <div class="container-fluid mt-2 mb-2 min-vw-90 d-flex flex-column justify-content-center table-responsive">
 
         <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
