--- a/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/GrupoPanelUsuario/administrarUsuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -9,7 +9,7 @@
   <div class="container-fluid mt-3">
 
       <!--TABLA-->
-      <div class="container-fluid p-0 p-lg-1 mt-2 mb-2 min-vw-90 d-flex justify-content-center table-responsive">
+      <div class="container-fluid p-0 p-lg-1 mt-2 mb-2 min-vw-90 d-flex flex-column justify-content-center table-responsive">
 
         <table id="tabla" datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="row-border hover w-100">
           <thead class="table-dark">
