--- a/src/app/GrupoCanario/canario/canario.component.html
+++ b/src/app/GrupoCanario/canario/canario.component.html
@@ -126,6 +126,6 @@ aria-labelledby="ModalLabel" aria-hidden="true">
 </div>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
