--- a/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
+++ b/src/app/GrupoFormularios/Creates/formulario-nuevo-post/formulario-nuevo-post.component.html
@@ -22,15 +22,25 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
         <input class="form-control" formControlName="titulo" type="text" placeholder="Título">
+        <div *ngIf="form.get('titulo')!.invalid && form.get('titulo')!.errors && (form.get('titulo')!.dirty || form.get('titulo')!.touched)">
+          <small class="text-danger" *ngIf="form.get('titulo')!.hasError('required')">Debe indicar un título</small>
+          <small class="text-danger" *ngIf="form.get('titulo')!.hasError('maxlength')">El título debe tener menos de 100 caracteres</small>
+          <small class="text-danger" *ngIf="form.get('titulo')!.hasError('minlength')">El título debe tener al menos 6 caracteres</small>
+        </div>
       </div>
       <div class="mb-3">
         <input class="form-control" formControlName="url_img" type="text" placeholder="URL de imagen">
       </div>
       <div class="mb-3">
         <textarea class="form-control rounded-0" formControlName="contenido" rows="10" placeholder="Contenido ..."></textarea>
+        <div *ngIf="form.get('contenido')!.invalid && form.get('contenido')!.errors && (form.get('contenido')!.dirty || form.get('contenido')!.touched)">
+          <small class="text-danger" *ngIf="form.get('contenido')!.hasError('required')">Debe indicar un contenido</small>
+          <small class="text-danger" *ngIf="form.get('contenido')!.hasError('minlength')">El contenido debe tener al menos 50 caracteres</small>
+          <small class="text-danger" *ngIf="form.get('contenido')!.hasError('maxlength')">El contenido debe tener menos de 5000 caracteres</small>
+        </div>
       </div>
       <div class="mb-3 d-flex justify-content-between">
-        <button type="submit" class="btn btn-primary">Añadir</button>
+        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Añadir</button>
       </div>
     </form>
   </div>
@@ -40,6 +50,6 @@
   <a routerLink="../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
