--- a/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
+++ b/src/app/GrupoPanelUsuario/administrarModeradores/tabla-moderadores/tabla-moderadores.component.html
@@ -88,6 +88,6 @@
   </div>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
