--- a/src/app/GrupoFormularios/Updates/update-asociacion/update-asociacion.component.html
+++ b/src/app/GrupoFormularios/Updates/update-asociacion/update-asociacion.component.html
@@ -24,11 +24,19 @@
         <label for="nombre">Nombre:</label>
         <input class="form-control" id="nombre" formControlName="nombre" [(ngModel)]="asociacion.nombre" type="text"
           placeholder="Nombre" value="{{ asociacion.nombre }}">
+          <div *ngIf="form.get('nombre')!.invalid && form.get('nombre')!.errors && (form.get('nombre')!.dirty || form.get('nombre')!.touched)">
+            <small class="text-danger" *ngIf="form.get('nombre')!.hasError('required')">Debe indicar un nombre</small>
+            <small class="text-danger" *ngIf="form.get('nombre')!.hasError('maxlength')">El nombre debe tener menos de 20 caracteres</small>
+            <small class="text-danger" *ngIf="form.get('nombre')!.hasError('minlength')">El nombre debe tener al menos 6 caracteres</small>
+          </div>
       </div>
       <div class="mb-3">
         <label for="nombre">URL de Imagen:</label>
         <input class="form-control" id="nombre" formControlName="url_img" [(ngModel)]="asociacion.url_img" type="text"
           placeholder="URL de Imagen" value="{{ asociacion.url_img }}">
+          <div *ngIf="form.get('id_mod')!.invalid && form.get('id_mod')!.errors && (form.get('id_mod')!.dirty || form.get('id_mod')!.touched)">
+            <small class="text-danger" *ngIf="form.get('id_mod')!.hasError('required')">Debe indicar un ID de asociación</small>
+          </div>
       </div>
       <div class="mb-3">
         <label for="id_mod">ID Moderador:</label>
@@ -38,7 +46,7 @@
         </select>
       </div>
       <div class="mb-3 d-flex justify-content-between">
-        <button type="submit" class="btn btn-primary">Editar</button>
+        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Editar</button>
       </div>
     </form>
   </div>
@@ -48,6 +56,6 @@
   <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
