--- a/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-canario/update-canario.component.html
@@ -37,6 +37,8 @@
           <option selected value="{{ canario.sexo }}"> {{ canario.sexo }}</option>
           <option *ngIf="canario.sexo === 'M'" value="H"> H </option>
           <option *ngIf="canario.sexo === 'H'" value="M"> M </option>
+          <option *ngIf="!canario.sexo" value="H"> H </option>
+          <option *ngIf="!canario.sexo" value="M"> M </option>
         </select>
       </div>
       <div class="mb-3 d-flex justify-content-between">
@@ -49,6 +51,6 @@
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
   <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
