--- a/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
+++ b/src/app/GrupoFormularios/Updates/update-usuario/update-usuario.component.html
@@ -22,25 +22,36 @@
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
       <div class="mb-3">
         <input class="form-control" formControlName="name" [(ngModel)]="user.name" type="text" placeholder="Nombre de moderador..." value="{{ user.name }}">
+        <div *ngIf="form.get('name')!.invalid && form.get('name')!.errors && (form.get('name')!.dirty || form.get('name')!.touched)">
+          <small class="text-danger" *ngIf="form.get('name')!.hasError('required')">Debe indicar un nombre</small>
+          <small class="text-danger" *ngIf="form.get('name')!.hasError('maxlength')">El nombre debe tener menos de 20 caracteres</small>
+          <small class="text-danger" *ngIf="form.get('name')!.hasError('minlength')">El nombre debe tener al menos 4 caracteres</small>
+        </div>
       </div>
       <div class="mb-3">
         <input class="form-control" formControlName="real_name" [(ngModel)]="user.real_name" type="text" placeholder="Nombre real..."  value="{{ user.real_name }}">
+        <div *ngIf="form.get('real_name')!.invalid && form.get('real_name')!.errors && (form.get('real_name')!.dirty || form.get('real_name')!.touched)">
+          <small class="text-danger" *ngIf="form.get('real_name')!.hasError('required')">Debe indicar un nombre real</small>
+          <small class="text-danger" *ngIf="form.get('real_name')!.hasError('maxlength')">El nombre real debe tener menos de 50 caracteres</small>
+          <small class="text-danger" *ngIf="form.get('real_name')!.hasError('minlength')">El nombre real debe tener al menos 4 caracteres</small>
+        </div>
       </div>
       <div class="mb-3">
         <input class="form-control" formControlName="email" [(ngModel)]="user.email" type="text" placeholder="E-mail..."  value="{{ user.email }}">
-      </div>
-      <div class="mb-3">
-        <label for="idAs">ID Asociación:</label>
-        <input class="form-control" id="idAs" formControlName="id_asociacion" [(ngModel)]="user.id_asociacion" type="number" value="{{ user.id_asociacion }}">
+        <div *ngIf="form.get('email')!.invalid && form.get('email')!.errors && (form.get('email')!.dirty || form.get('email')!.touched)">
+          <small class="text-danger" *ngIf="form.get('email')!.hasError('required')">Debe indicar una dirección de email</small>
+          <small class="text-danger" *ngIf="form.get('email')!.errors?.email">Debe indicar una dirección de email válido</small>
+        </div>
       </div>
       <div class="mb-3">
         <input class="form-control" formControlName="password" type="password" placeholder="Contraseña...">
-      </div>
-      <div class="mb-3">
-        <input class="form-control" formControlName="password_confirmation" type="password" placeholder="Confirme la contraseña...">
+        <div *ngIf="form.get('password')!.invalid && form.get('password')!.errors && (form.get('password')!.dirty || form.get('password')!.touched)">
+          <small class="text-danger" *ngIf="form.get('password')!.hasError('required')">Debe indicar la contraseña</small>
+          <small class="text-danger" *ngIf="form.get('password')!.hasError('minlength')">La contraseña debe tener al menos 8 caracteres</small>
+        </div>
       </div>
       <div class="mb-3 d-flex justify-content-between">
-        <button type="submit" class="btn btn-primary">Editar</button>
+        <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Añadir</button>
       </div>
     </form>
   </div>
@@ -49,6 +60,6 @@
 <div class="col w-70 d-flex justify-content-center" style="margin-top: 1em;">
   <a routerLink="../../" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
