--- a/src/app/GrupoGeneral/error-page/error-page.component.html
+++ b/src/app/GrupoGeneral/error-page/error-page.component.html
@@ -7,5 +7,5 @@
 </div>
 
 <div class="row">
-  <app-footer class="min-vw-100 fixed-bottom"></app-footer>
+  <app-footer class="min-vw-100 "></app-footer>
 </div>
