--- a/src/app/GrupoLogin/login/login.component.html
+++ b/src/app/GrupoLogin/login/login.component.html
@@ -13,10 +13,17 @@
         <!--Campos del formulario-->
         <form [formGroup]="form" (ngSubmit)="onSubmit()" class="d-flex flex-column justify-content-center">
           <div class="mb-3">
-            <input class="form-control" formControlName="email" type="text" placeholder="Usuario...">
+            <input class="form-control" formControlName="email" type="text" placeholder="Email...">
+            <div *ngIf="form.get('email')!.invalid && form.get('email')!.errors && (form.get('email')!.dirty || form.get('email')!.touched)">
+              <small class="text-danger" *ngIf="form.get('email')!.hasError('required')">Debe indicar una dirección de email</small>
+              <small class="text-danger" *ngIf="form.get('email')!.errors?.email">Debe indicar una dirección de email válido</small>
+            </div>
           </div>
           <div class="mb-3">
             <input class="form-control" formControlName="password" type="password" placeholder="contraseña...">
+            <div *ngIf="form.get('password')!.invalid && form.get('password')!.errors && (form.get('password')!.dirty || form.get('password')!.touched)">
+              <small class="text-danger" *ngIf="form.get('password')!.hasError('required')">Debe indicar la contraseña</small>
+            </div>
           </div>
 
           <!-- Botones inferiores -->
@@ -25,7 +32,7 @@
 
             <div class="d-flex flex-column-reverse flex-lg-row">
               <a class="mt-3 mt-lg-0 mr-lg-4" routerLink="/registerUser">Registrarse</a>
-              <button type="submit" class="btn btn-primary">Entrar</button>
+              <button type="submit" [disabled]="form.invalid" class="btn btn-primary">Entrar</button>
             </div>
           </div>
         </form>
