--- a/src/app/GrupoNotificaciones/info-notificacion/info-notificacion.component.html
+++ b/src/app/GrupoNotificaciones/info-notificacion/info-notificacion.component.html
@@ -114,6 +114,6 @@
   <a routerLink="/notificaciones" class="btn info-btn-usr" type="button">Atrás</a>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
