--- a/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
+++ b/src/app/GrupoNotificaciones/tabla-notificaciones/tabla-notificaciones.component.html
@@ -72,6 +72,6 @@
 </div>
 
 <!-- Footer -->
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
