--- a/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
+++ b/src/app/GrupoPanelUsuario/user-panel/user-panel.component.html
@@ -28,6 +28,6 @@
 </ng-template>
 
 <!-- footer -->
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
