--- a/src/app/GrupoPrincipal/principal/principal.component.html
+++ b/src/app/GrupoPrincipal/principal/principal.component.html
@@ -29,6 +29,6 @@
   </div>
 </div>
 
-<div class="container-fluid p-0">
+<div class="footer container-fluid p-0 ">
   <app-footer class="col p-0"></app-footer>
 </div>
